[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_buffer"
authors = [{ name = "LYSR Sàrl", email = "info@lysr.ch" }]
version = "0.2.7"
readme= "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "build",
    "Cython",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
